增加协议生成的批处理 修改netmanager

--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -1,10 +1,13 @@
 #登录
-10001=login_message.CMsgAccountLoginRequest,0
-10002=login_message.CMsgAccountLoginResponse,0
-10003=login_message.CMsgAccountRegistRequest,0
-10004=login_message.CMsgAccountRegistResponse,0
+10001=CMsgAccountLoginRequest,0
+10002=CMsgAccountLoginResponse,0
+10003=CMsgAccountRegistRequest,0
+10004=CMsgAccountRegistResponse,0
 #角色相关
-10101=role_message.CMsgRoleListRequest,0
-10102=role_message.CMsgRoleListResponse,0
-10103=role_message.CMsgRoleCreateRequest,0
-10104=role_message.CMsgRoleCreateResponse,0
+10101=CMsgRoleListRequest,0
+10102=CMsgRoleListResponse,0
+10103=CMsgRoleCreateRequest,0
+10104=CMsgRoleCreateResponse,0
+#helloworld
+10201=CsHelloWorld,0
+10202=ScHelloWorld,0
