简化登录协议;更改客户端协议生成;增加聊天协议;

--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -1,13 +1,9 @@
 #登录
-10001=CMsgAccountLoginRequest,0
-10002=CMsgAccountLoginResponse,0
-10003=CMsgAccountRegistRequest,0
-10004=CMsgAccountRegistResponse,0
-#角色相关
-10101=CMsgRoleListRequest,0
-10102=CMsgRoleListResponse,0
-10103=CMsgRoleCreateRequest,0
-10104=CMsgRoleCreateResponse,0
+10001=CsLogin,0
+10002=ScLogin,0
 #helloworld
 10201=CsHelloWorld,0
 10202=ScHelloWorld,0
+#talk
+10301=CsTalk,0
+10302=ScTalk,0
