增加协议;更改协议conf格式;

--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -1,12 +1,18 @@
 #登录
-10001=CsLogin,0
-10002=ScLogin,0
+10001=CsLogin
+10002=ScLogin
 #helloworld
-10201=CsHelloWorld,0
-10202=ScHelloWorld,0
+10201=CsHelloWorld
+10202=ScHelloWorld
 #talk
-10301=CsTalk,0
-10302=ScTalk,0
+10301=CsTalk
+10302=ScTalk
 #Scene
-10401=CsEnterScene,0
-10402=ScEnterScene,0
+10401=CsEnterScene
+10402=ScEnterScene
+10403=CsPlayerMove
+10404=ScAllPlayerPosInfo#所有玩家位置状态;定期发
+10405=CsPlayerIsMove
+10406=ScPlayerIsMove
+10407=CsPlayerUseSkill
+10408=ScPlayerUseSkill
