--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -12,6 +12,8 @@
 10402=ScEnterScene
 10403=CsPlayerMove
 10404=ScAllPlayerPosInfo#所有玩家位置状态;定期发
-10405=CsPlayerIsMove
-10407=CsPlayerUseSkill
-10408=ScPlayerUseSkill
+10405=CsPlayerStartMove
+10406=CsPlayerEndMove
+10407=ScPlayerEndMove
+10408=CsPlayerUseSkill
+10409=ScPlayerUseSkill
