--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -15,5 +15,6 @@
 10405=CsPlayerStartMove
 10406=CsPlayerEndMove
 10407=ScPlayerEndMove
-10408=CsPlayerUseSkill
-10409=ScPlayerUseSkill
+10408=CsPlayerEndMovePos
+10409=CsPlayerUseSkill
+10410=ScPlayerUseSkill
