--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -18,3 +18,6 @@
 10408=CsPlayerEndMovePos
 10409=CsPlayerUseSkill
 10410=ScPlayerUseSkill
+10411=CsPlayerUpdateMoveDir
+10412=ScPlayerUpdateMoveDir
+10413=ScPlayerStartMove
