--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -2,7 +2,7 @@
 10001=CsLogin
 10002=ScLogin
 10003=CsAsyncTime
-10004=CsAsyncTime
+10004=ScAsyncTime
 #helloworld
 10201=CsHelloWorld
 10202=ScHelloWorld
