--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -12,12 +12,18 @@
 #Scene
 10401=CsEnterScene
 10402=ScEnterScene
+
 10404=ScAllPlayerPosInfo#所有玩家位置状态;定期发
 10405=CsPlayerStartMove
-10406=CsPlayerEndMove
-10407=ScPlayerEndMove
+10406=ScPlayerStartMove
+
+10407=CsPlayerEndMove
+10408=ScPlayerEndMove
+
 10409=CsPlayerUseSkill
 10410=ScPlayerUseSkill
+
 10411=CsPlayerUpdateMoveDir
 10412=ScPlayerUpdateMoveDir
+
 10413=ScPlayerStartMove
