进入场景广播;离开场景广播;

--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -26,4 +26,7 @@
 10411=CsPlayerUpdateMoveDir
 10412=ScPlayerUpdateMoveDir
 
-10413=ScPlayerStartMove
+10413=ScOtherRoleEnterScene
+
+10490=CsLeaveScene
+10491=ScLeaveScene
