--- a/server/config/loginservice.cfg
+++ b/server/config/loginservice.cfg
@@ -10,12 +10,16 @@ bootstrap = "snlua bootstrap"	-- The service for bootstrap
 standalone = "0.0.0.0:2013"
 luaservice = root.."service/?.lua;"..root.."test/?.lua;"..root.."../src/?.lua"
 lualoader = "lualib/loader.lua"
--- preload = "./examples/preload.lua"	-- run preload.lua before every lua service run
+--preload = 	-- run preload.lua before every lua service run
 snax = root.."examples/?.lua;"..root.."test/?.lua"
 -- snax_interface_g = "snax_g"
-cpath = root.."cservice/?.so"
+cpath = root.."cservice/?.so;"
 -- daemon = "./skynet.pid"
-lua_path = root.."lualib/?.lua;"..root.."../common/?.lua"
---lua_cpath = root.."luaclib/?.so"
+lua_cpath = root.."luaclib/?.so;"..root.."../3rd/thrift/clib/?.so;"
+lua_path = root.."lualib/?.lua;"..root.."../common/?.lua;"
+..root.."../3rd/thrift/?.lua;"
+..root.."../proto/?.lua;"
+
+
 
 
