增加Ping消息;增加移动检测失败消失;

--- a/tech/msg/msgid.conf
+++ b/tech/msg/msgid.conf
@@ -4,6 +4,10 @@
 10003=CsAsyncTime
 10004=ScAsyncTime
 
+#Ping
+10201=CsPing
+10202=ScPong
+
 #Scene
 10401=CsEnterScene
 10402=ScEnterScene
@@ -23,5 +27,9 @@
 
 10413=ScOtherRoleEnterScene
 
+10414=ScPlayerCheckFailured
+
 10490=CsLeaveScene
 10491=ScLeaveScene
+
+
